--- a/result/2022-07-17.md
+++ b/result/2022-07-17.md
@@ -44,3 +44,4 @@
 44. [黄山警民救助一只黄山短尾幼猴](https://s.weibo.com//weibo?q=%23%E9%BB%84%E5%B1%B1%E8%AD%A6%E6%B0%91%E6%95%91%E5%8A%A9%E4%B8%80%E5%8F%AA%E9%BB%84%E5%B1%B1%E7%9F%AD%E5%B0%BE%E5%B9%BC%E7%8C%B4%23&Refer=top) 103310
 45. [周琦状态](https://s.weibo.com//weibo?q=%23%E5%91%A8%E7%90%A6%E7%8A%B6%E6%80%81%23&Refer=top) 57129
 46. [马龙王楚钦无缘男双决赛](https://s.weibo.com//weibo?q=%23%E9%A9%AC%E9%BE%99%E7%8E%8B%E6%A5%9A%E9%92%A6%E6%97%A0%E7%BC%98%E7%94%B7%E5%8F%8C%E5%86%B3%E8%B5%9B%23&Refer=top) 44627
+47. [男生刻在DNA里的中二](https://s.weibo.com//weibo?q=%23%E7%94%B7%E7%94%9F%E5%88%BB%E5%9C%A8DNA%E9%87%8C%E7%9A%84%E4%B8%AD%E4%BA%8C%23&Refer=top) 11881
